# djutils-rest

./: .gitignore  LICENSE  pyproject.toml
.github/workflows/: pypi-release.yml
djutils_rest/: __init__.py
djutils_rest/api/: decorator.py  default.py  response.py
example/core/: settings.py  urls.py
